# MusicalInstrumentService

MusicalInstrumentService/: CMakeLists.txt  main.cpp
MusicalInstrumentService/Headers/AdminWindow/: adminwindow.cpp  adminwindow.h  adminwindow.ui
MusicalInstrumentService/Headers/Application/: Application.cpp  Application.h
MusicalInstrumentService/Headers/LoginWindow/: loginwindow.cpp  loginwindow.h  loginwindow.ui
MusicalInstrumentService/Headers/UserWindow/: userwindow.cpp  userwindow.h  userwindow.ui
